# quadrotor_mpc

./: README.md  apply_phase4_engine_closure.py  code.c  mpc.txt
1.Docs/Simulation_design/: 00_simulation_vision.md  01_requirements.md  02_architecture.md  03_runtime_flow.md  04_data_model.md  05_engine_interface.md  06_controller_interface.md  07_scenerio_config.md  08_logging_and_metrics.md  09_validation_plan.md  10_known_limitations.md  11_refactor_plan.md  PHASE4_ENGINE_CLOSURE.md  README.md
1.Docs/Simulation_design/adr/: ADR-001-engine-abstraction.md  ADR-002-single-thread-vs-mpc-thread.md  README.md  (+2 more)
1.Docs/Theory/: 01_Introduction.md  02_Quadrotor_Dynamics.md  03_Coordinate_Frames.md  04_Rotation_Matrix.md  05_Euler_Angles.md  06_Quaternion.md  07_Newton_Euler.md  08_Linearization.md  09_Discretization.md  10_State_Space_Model.md  11_MPC.md  12_CCMPC.md  13_Chance_Constraints.md  14_Covariance_Propagation.md  15_Obstacle_Avoidance.md  16_Optimization.md  17_Solver.md  18_Implementation_Notes.md  19_Glossary.md  20_Reference_Formula.md  README.md
2.Code/: verify_formulas.py
2.Code/ccmpc/: dynamics.py  obstacle.py  types.py  uncertainty.py  utils.py
2.Code/quadrotor_ccmpc/: MUJOCO_LOG.TXT  pyproject.toml  sim_demo_mujoco.py  sim_demo_nosim.py
2.Code/quadrotor_ccmpc/ccmpc/: __init__.py  ccmpc.py  dynamics.py  mixer.py  mujoco_dynamics.py  uncertainty.py  utils.py
2.Code/quadrotor_ccmpc/config/: mpc.yaml  simulation_corridor.yaml
2.Code/quadrotor_ccmpc/models/: quadrotor.xml
2.Code/quadrotor_ccmpc/tests/: conftest.py  test_uncertainty.py  test_utils.py
3.Notebooks/: 1.0_quadrotor_dynamics.ipynb  1.1_linearization.ipynb  2.0_linear_mpc.ipynb  2.1_iterative_mpc.ipynb  3.0_uncertainty_propagation.ipynb  3.1_chance_constraints.ipynb  3.2_collision_geometry.ipynb  4.0_ccmpc_formulation.ipynb  4.1_obstacle_pipeline.ipynb  4.2_ccmpc_demo.ipynb  5.0_multi_robot.ipynb  5.1_fov_constraints.ipynb  5.2_verification.ipynb
4.Reference/quadrotor_ccmpc/: MUJOCO_LOG.TXT  __init__.py  benchmark_results.md  sim_demo_mujoco.py  sim_demo_nosim.py
docs/refactor/: IMPLEMENTATION_TRACKER.md
(+60 files in other folders)
